--- a/index.html
+++ b/index.html
@@ -79,17 +79,21 @@
       </div>
 
       <div id="letter">
-        <h1>For My <span>Love</span></h1>
+        <h1>Hello <span>Kharu</span></h1>
 
         <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
         <p>
-          You are the person I have been dreaming all my life , so allow me to
-          express my intense love for you. You are the most precious thing in my
-          life. You have fascinated my heart and seized my mind with your
-          magnetic presence and I keep dreaming of yourself Your memories are
-          invaluable treasure of my life, which are locked inside my heart. The
-          time spent with you was the most mesmerizing and delightful of my
-          life. <br />
+          
+          You hold a special place in my heart,
+          and I want you to know that you are incredibly 
+          important to me. Your presence has this captivating
+          effect on both my heart and mind, making every 
+          moment we share together truly enchanting. The
+          time we spend in each other's company is not
+          just memorable but also the most delightful and
+          mesmerizing part of my life. I cherish the experiences
+          we create together, and the memories we build are like invaluable
+          treasures that I hold close to my heart. <br />
           <br />
           I take this opportunity to ask for your consent if you want to be my
           life partner.This letter is a token of my love for you. <br />
